--- a/helm-guestbook/values/app-a.yaml
+++ b/helm-guestbook/values/app-a.yaml
@@ -1,4 +1,7 @@
 ingress:
     enabled: true
+    annotations: {}
     hosts:
-        - app-a.k8s.voile.moe
+        - host: app-a.k8s.voile.moe
+          paths: []
+    tls: []
