--- a/test/values-app-a.yaml
+++ b/test/values-app-a.yaml
@@ -9,7 +9,8 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: app-a.k8s.voile.moe
-      paths: []
+      paths:
+        - /
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
