--- a/test/values-app-a.yaml
+++ b/test/values-app-a.yaml
@@ -8,7 +8,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: app-a.k8s.voile.moe
+    - host: app-test.k8s.voile.moe
       paths:
         - /
   tls: []
